# HelloCMake

./: CMakeLists.txt  main.cpp
